# holecolour

./: .gitignore  README.md  pyproject.toml  run_in_jupyter.ipynb
docs/: README.md
docs/notes/: AGGREGATE_EFFICIENCY_NOTES.md  ARCHITECTURE_SPLIT_NOTES.md  ARRAY_FIRST_AGGREGATE_NOTES.md  ARRAY_PLOT_PREP_NOTES.md  ARTIFACT_BOUNDARY_NOTES.md  BINARY_CACHE_NOTES.md  CANONICAL_STATIC_GEOMETRY_PATCH.md  CLI_RENDER_EFFICIENCY_NOTES.md  CLI_VISIBILITY_HEARTBEAT_NOTES.md  CLI_WINDOWS_RENDERING_NOTES.md  COMPARISON_BOUNDARY_NOTES.md  HOTSPOT_UNCERTAINTY_TABLE_NOTES.md  INTERNAL_TABLE_NOTES.md  MEMORY_HOTFIX_NOTES.md  NESTED_BAR_WINDOWS_FIX_NOTES.md  PARALLELIZATION_NOTES.md  PER_FRAME_CACHE_NOTES.md  PROCESS_VISIBILITY_NOTES.md  PROCESS_VISIBILITY_NOTES_M24.md  RADIAL_CLUSTER_AVERAGE_HOLE_PATCH.md  RADIAL_CLUSTER_VISUALS_PATCH.md  RDF_ARTIFACT_BOUNDARY_NOTES.md  REGISTRATION_HOTFIX.md  SAFE_MODULAR_VERIFICATION.md  SECTOR_INTERNAL_TABLE_NOTES.md  SECTOR_RDF_BOUNDARY_NOTES.md  SECTOR_VALIDATION_PLOT_BOUNDARY_NOTES.md  TEMPORAL_INTERNAL_TABLE_NOTES.md  VALIDATION_CACHE_NOTES.md  VALIDATION_JOIN_TABLE_NOTES.md  VALIDATION_PLOT_BOUNDARY_NOTES.md  WAFER_NONHOLE_HSL_CLUSTER_DIRECTIVE_PACK.md
docs/patches/: RADIAL_CLUSTER_AVERAGE_HOLE_PATCH.json  RADIAL_CLUSTER_VISUALS_PATCH.json
docs/refactor/: README.md  REFactor_BACKLOG.md  (+30 more)
holecolor/: __init__.py  cli.py  color_analysis.py  notebook.py  pipeline.py
packaging/: package_app.bat  package_app.config.json  package_app.ps1
scripts/: hole_detection_probe.py  hole_detection_probe_new.py  invariance_heatmap.py  test_syntax.py
(+142 files in other folders)
